--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -32,6 +32,7 @@ button:
   reset     : RESET
   finalize  : FINALIZE
   document  : DOCUMENT
+  login     : LOGIN
 
 menu-button:
   edit         : Edit
@@ -286,7 +287,6 @@ model:
 
 page:
   header:
-    title: BitFever platform
   unknown:
     message: Unknown page
 
@@ -624,6 +624,8 @@ page:
       code: Code
       name: Name
       system: System
+      login:
+        title: System login to
 
   # ==============================================================================
 
@@ -700,6 +702,13 @@ adapter:
     authUrl : Authentication URL
     apiUrl  : API URL
     noAuth  : No authentication
+
+  TS:
+    clientId   : Client ID / API Key
+    liveAccount: Connect to LIVE account
+    username   : Username
+    password   : Password
+    twoFACode  : Two Factor Authentication Code
 
 # ==============================================================================
 # ===
